[gd_scene load_steps=8 format=3 uid="uid://b280avyrjcv5t"]

[ext_resource type="Script" path="res://Scripts/Back_Button.gd" id="1"]
[ext_resource type="FontFile" uid="uid://cxgxlgqxgek6n" path="res://UI/Fonts/Non_Nunito/domino_font/human_domino.otf" id="2"]
[ext_resource type="Texture2D" uid="uid://bgiplwlfki22u" path="res://UI/Control/red_button10.png" id="3"]
[ext_resource type="Texture2D" uid="uid://coqqyg76wct3k" path="res://UI/Control/grey_button03.png" id="4"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("2")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="Animation" id="2"]
resource_name = "start"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Button:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-300, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kxsim"]
_data = {
"start": SubResource("2")
}

[node name="Back_Button" type="Control"]
layout_mode = 3
anchor_right = 0.131
anchor_bottom = 0.088
offset_right = -0.144012
offset_bottom = 0.200001
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("1")

[node name="Button" type="TextureButton" parent="."]
custom_minimum_size = Vector2(100, 50)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -300.0
offset_right = -300.0
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_default_cursor_shape = 2
shortcut_in_tooltip = false
texture_normal = ExtResource("4")
texture_hover = ExtResource("3")

[node name="MarginContainer" type="MarginContainer" parent="Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/margin_bottom = 4

[node name="Label" type="Label" parent="Button/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 7
size_flags_vertical = 7
theme_override_fonts/font = SubResource("1")
text = "Back"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kxsim")
}
autoplay = "start"

[connection signal="mouse_entered" from="Button" to="." method="_on_TextureButton_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_TextureButton_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_TextureButton_pressed"]
